--- a/src/menus/View/mainMenu.fxml
+++ b/src/menus/View/mainMenu.fxml
@@ -15,55 +15,66 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="650.0" minWidth="850.0" prefHeight="650.0" prefWidth="850.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" fx:controller="menus.Controller.mainMenuController">
+<AnchorPane minHeight="650.0" minWidth="850.0" prefHeight="650.0" prefWidth="850.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.Controller.mainMenuController">
     <children>
         <AnchorPane layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
             <children>
-                <VBox alignment="CENTER" prefHeight="366.0" prefWidth="590.0" spacing="15.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <children>
-                        <Label fx:id="gameTitleLabel" text="Paper Legion">
-                            <font>
-                                <Font name="Avenir Light" size="39.0" />
-                            </font>
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                        </Label>
-                        <Label fx:id="mainMenuLoggedInAsLabel" text="Logged in as ">
-                            <font>
-                                <Font size="22.0" />
-                            </font>
-                            <VBox.margin>
-                                <Insets bottom="15.0" />
-                            </VBox.margin>
-                        </Label>
-                        <JFXButton fx:id="mainMenuPlayButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #000000;" text="Play" textFill="WHITE">
-                            <VBox.margin>
-                                <Insets bottom="-10.0" />
-                            </VBox.margin>
-                        </JFXButton>
-                        <JFXButton fx:id="mainMenuSettingsButton" maxHeight="50.0" maxWidth="256.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Settings">
-                            <VBox.margin>
-                                <Insets bottom="-10.0" />
-                            </VBox.margin>
-                        </JFXButton>
-                        <JFXButton fx:id="mainMenuStatsButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Stats">
-                            <VBox.margin>
-                                <Insets bottom="-10.0" />
-                            </VBox.margin>
-                        </JFXButton>
-                        <JFXButton fx:id="mainMenuGameInfoButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Game Info">
-                            <VBox.margin>
-                                <Insets bottom="-10.0" />
-                            </VBox.margin>
-                        </JFXButton>
-                        <JFXButton fx:id="mainMenuExitButton" alignment="CENTER" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5 #e3e4e5#e3e4e5;" text="Exit">
-                            <VBox.margin>
-                                <Insets bottom="-10.0" />
-                            </VBox.margin>
-                        </JFXButton>
-                    </children>
-                </VBox>
+            <HBox alignment="CENTER" prefHeight="470.0" prefWidth="624.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                      <VBox alignment="CENTER_LEFT" prefHeight="366.0" prefWidth="590.0" spacing="15.0">
+                          <children>
+                              <Label fx:id="gameTitleLabel" text="Paper Legion">
+                                  <font>
+                                      <Font name="Avenir Light" size="39.0" />
+                                  </font>
+                                  <VBox.margin>
+                                      <Insets />
+                                  </VBox.margin>
+                              </Label>
+                              <Label fx:id="mainMenuLoggedInAsLabel" text="Logged in as ">
+                                  <font>
+                                      <Font size="22.0" />
+                                  </font>
+                                  <VBox.margin>
+                                      <Insets bottom="15.0" />
+                                  </VBox.margin>
+                              </Label>
+                              <JFXButton fx:id="mainMenuPlayButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #000000;" text="Play" textFill="WHITE">
+                                  <VBox.margin>
+                                      <Insets bottom="-10.0" />
+                                  </VBox.margin>
+                              </JFXButton>
+                              <JFXButton fx:id="mainMenuSettingsButton" maxHeight="50.0" maxWidth="256.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Settings">
+                                  <VBox.margin>
+                                      <Insets bottom="-10.0" />
+                                  </VBox.margin>
+                              </JFXButton>
+                              <JFXButton fx:id="mainMenuStatsButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Stats">
+                                  <VBox.margin>
+                                      <Insets bottom="-10.0" />
+                                  </VBox.margin>
+                              </JFXButton>
+                              <JFXButton fx:id="mainMenuGameInfoButton" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5;" text="Game Info">
+                                  <VBox.margin>
+                                      <Insets bottom="-10.0" />
+                                  </VBox.margin>
+                              </JFXButton>
+                              <JFXButton fx:id="mainMenuExitButton" alignment="CENTER" maxHeight="50.0" maxWidth="257.0" minHeight="30.0" minWidth="90.0" prefHeight="50.0" prefWidth="257.0" style="-fx-background-color: #e3e4e5#e3e4e5 #e3e4e5#e3e4e5;" text="Exit">
+                                  <VBox.margin>
+                                      <Insets bottom="-10.0" />
+                                  </VBox.margin>
+                              </JFXButton>
+                          </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets left="50.0" />
+                     </HBox.margin>
+                      </VBox>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
             </children>
         </AnchorPane>
     </children>
